changed the social icons and updated navbar

--- a/client/jsconfig.json
+++ b/client/jsconfig.json
@@ -1,5 +1,17 @@
+// {
+//   "compilerOptions": {
+//     "paths": {
+//       "@/*": ["./*"]
+//     }
+//   }
+// }
+
+
+
+
 {
   "compilerOptions": {
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./*"]
     }
